Mensageria com AMPQ

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -62,3 +62,9 @@ link.register_prompt=Não possui uma conta? Registre-se aqui
 register.header=Registrar Novo Usuário
 link.login_prompt=Já possui uma conta? Faça login aqui
 
+title.contact=Contato
+header.contact_us=Fale Conosco
+label.message=Mensagem
+button.send=Enviar
+confirmation.message=Sua mensagem foi enviada com sucesso! Entraremos em contato em breve.
+link.contact_page=Fale Conosco
