--- a/src/main/resources/i18n/messages_en_US.properties
+++ b/src/main/resources/i18n/messages_en_US.properties
@@ -62,3 +62,9 @@ register.header=Register New User
 link.login_prompt=Already have an account? Log in here
 
 
+title.contact=Contact
+header.contact_us=Contact Us
+label.message=Message
+button.send=Send
+confirmation.message=Your message has been sent successfully! We will contact you shortly.
+link.contact_page=Contact Us
