Estilização da index.html

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -68,3 +68,30 @@ label.message=Mensagem
 button.send=Enviar
 confirmation.message=Sua mensagem foi enviada com sucesso! Entraremos em contato em breve.
 link.contact_page=Fale Conosco
+
+page.title=Recomendações de Produtos
+page.header=Obtenha Recomendações de Produtos
+label.gender=Sexo
+gender.male=Masculino
+gender.female=Feminino
+button.submit=Obter Recomendações
+
+recommendation.name=Product Name
+recommendation.description=Product Description
+recommendation.price=Price
+currency.symbol=R$
+
+# Navbar
+navbar.home=Home
+navbar.list_products=List Products
+navbar.add_product=Add Product
+navbar.search_placeholder=Search product by name...
+
+# Home page
+home.title=Welcome to the product management system
+home.description=Use the menu to navigate between pages.
+
+# Cards
+card.list_products=List Products
+card.add_product=Add Products
+card.search_product=Search Products
