--- a/src/main/resources/i18n/messages_en_US.properties
+++ b/src/main/resources/i18n/messages_en_US.properties
@@ -68,3 +68,30 @@ label.message=Message
 button.send=Send
 confirmation.message=Your message has been sent successfully! We will contact you shortly.
 link.contact_page=Contact Us
+
+page.title=Product Recommendations
+page.header=Get Product Recommendations
+label.gender=Gender
+gender.male=Male
+gender.female=Female
+button.submit=Get Recommendations
+
+recommendation.name=Product Name
+recommendation.description=Product Description
+recommendation.price=Price
+currency.symbol=$
+
+# Navbar
+navbar.home=Home
+navbar.list_products=List Products
+navbar.add_product=Add Product
+navbar.search_placeholder=Search product by name...
+
+# Home page
+home.title=Welcome to the product management system
+home.description=Use the menu to navigate between pages.
+
+# Cards
+card.list_products=List Products
+card.add_product=Add Products
+card.search_product=Search Products
