--- a/src/main/resources/i18n/messages_pt_BR.properties
+++ b/src/main/resources/i18n/messages_pt_BR.properties
@@ -65,3 +65,30 @@ label.message=Mensagem
 button.send=Enviar
 confirmation.message=Sua mensagem foi enviada com sucesso! Entraremos em contato em breve.
 link.contact_page=Fale Conosco
+
+page.title=Recomendações de Produtos
+page.header=Obtenha Recomendações de Produtos
+label.gender=Sexo
+gender.male=Masculino
+gender.female=Feminino
+button.submit=Obter Recomendações
+
+recommendation.name=Nome do Produto
+recommendation.description=Descrição do Produto
+recommendation.price=Preço
+currency.symbol=R$
+
+# Navbar
+navbar.home=Início
+navbar.list_products=Listar Produtos
+navbar.add_product=Adicionar Produto
+navbar.search_placeholder=Buscar produto por nome...
+
+# Home page
+home.title=Bem-vindo ao sistema de gerenciamento de produtos
+home.description=Use o menu para navegar entre as páginas.
+
+# Cards
+card.list_products=Listar Produtos
+card.add_product=Adicionar Produtos
+card.search_product=Buscar Produtos
