--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -95,3 +95,14 @@ home.description=Use the menu to navigate between pages.
 card.list_products=List Products
 card.add_product=Add Products
 card.search_product=Search Products
+
+recommendation.no_results=Nenhum produto encontrado para a faixa etária e sexo selecionados.
+recommendation.explanation=Motivo da Recomendação
+
+navbar.logo=Argos AI
+page.welcome_message=Welcome to the product management system
+page.instruction=Use the menu below to navigate between pages.
+menu.list_products=Products
+menu.list_clients=Clients
+menu.ai_recommendations=AI Recommendations
+menu.contact_us=Contact Us
