--- a/src/main/resources/i18n/messages_pt_BR.properties
+++ b/src/main/resources/i18n/messages_pt_BR.properties
@@ -92,3 +92,14 @@ home.description=Use o menu para navegar entre as páginas.
 card.list_products=Listar Produtos
 card.add_product=Adicionar Produtos
 card.search_product=Buscar Produtos
+
+recommendation.no_results=Nenhum produto encontrado para a faixa etária e sexo selecionados.
+recommendation.explanation=Motivo da Recomendação
+
+navbar.logo=Argos AI
+page.welcome_message=Bem-vindo ao sistema de gerenciamento de Produtos
+page.instruction=Use o menu abaixo para navegar entre as páginas.
+menu.list_products=Produtos
+menu.list_clients=Clientes
+menu.ai_recommendations=Sugestões com IA
+menu.contact_us=Fale Conosco
